sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:17: error: Unmatched closing brace '}' ignored here
        setValeur(j, v) }}
                        ^